# Kairos

./: .gitignore  AGENTS.md  README.md  requirements.txt  start-backend.ps1  start-frontend.ps1  vercel.json
backend/: .env.example  README.md  pyproject.toml  vercel.json
backend/app/: auth.py  config.py  db.py  main.py  mock_data.py  schema.sql  schema_postgres.sql  schemas.py
backend/app/services/: fateweaver.py  google_calendar.py  parser.py  scheduler.py  weather.py
backend/tests/: test_fateweaver.py
extension/: manifest.json
extension/src/: background.js  content.js  styles.css
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/src/: App.tsx  api.ts  mockApi.ts  types.ts
