[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.13.1",
    "python-multipart==0.0.9",
    "uvicorn==0.30.6",
]
